test/libsolidity/syntaxTests/parsing/max_depth_reached_3.sol
contract C {
    function f() {
        uint x = f
        (((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((( // 100*(
        ((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((
        (((((((((((((((((((((((((((((((((((((( (
....
// ----
// ParserError 7319: (325-326): Maximum recursion depth reached during parsing.
